2008-10-10  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
 
	* libanjuta/anjuta-preferences-dialog.c:
 	* libanjuta/anjuta-status.c:
 	Removed more libgnome stuff. 

2008-10-07  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/project-wizard/anjuta-project-wizard.glade:
	Fix #555453 Application Assistant title misspelled

2008-10-06  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/build-basic-autotools/configuration-list.c:
	Fix #554337 Allow to change build directory to project directory

2008-10-06  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/build-basic-autotools/build-options.c:
	Fix #554337 Set uri instead of current_folder_uri
	Fix a warning when there is no arguments

2008-10-06  Johannes Schmid  <jhs@gnome.org>

	* plugins/file-loader/plugin.c (on_session_load):
	Do not show status ticks for async file loading
	
	* plugins/sourceview/sourceview.c (on_insert_text), (on_backspace),
	(sourceview_instance_init):
	#554684 – Cursor column number is not updated when typing text

2008-10-04  James Liggett  <jrliggett@cox.net>

	* plugins/subversion/svn-switch-command.c (svn_switch_command_new):
	Make sure the repository URL given to the switch command is canonicalized.

2008-10-03  James Liggett  <jrliggett@cox.net>

	* plugins/profiler/plugin.c (ifile_open):
	Fix a wrong g_free call.
	
	Spotted by Yuriy Penkin <yuriy.penkin@gmail.com>

2008-10-02  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/run-program/parameters.c:
	Fix #554337 could not find glade file while executing a program

2008-09-29  Sébastien Granjoux  <seb.sfo@free.fr>

	* configure.in,
	manuals/Makefile.am,
	(added) manuals/anjuta-build-tutorial/anjuta-build-tutorial-C.omf,
	(added) manuals/anjuta-build-tutorial/Makefile.am,
	(added) manuals/anjuta-build-tutorial/C/anjuta-build-tutorial.xml,
	(added) manuals/anjuta-build-tutorial/C/autotools-process.dia,
	(added) manuals/anjuta-build-tutorial/C/configure-process.dia,
	(added) manuals/anjuta-build-tutorial/C/compilation-stages.dia,