@@ -22,26 +22,16 @@ AC_SUBST(ANJUTA_VERSION)
 ANJUTA_VERSION=anjuta_version
 AC_SUBST(ANJUTA_VERSION)
 
-GLIB_REQUIRED=2.14.0
-GOBJECT_REQUIRED=2.8.0
-GMODULE_REQUIRED=2.8.0
-GIO_REQUIRED=2.16.0
-GTHREAD_REQUIRED=2.8.0
+GLIB_REQUIRED=2.16.0
 GDK_PIXBUF_REQUIRED=2.0.0
-GTK_REQUIRED=2.10.0
+GTK_REQUIRED=2.12.0
 ORBIT_REQUIRED=2.6.0
 LIBGLADE_REQUIRED=2.3.0
 GNOME_REQUIRED=2.12.0
-GNOME_CANVAS_REQUIRED=2.12.0
-GNOME_UI_REQUIRED=2.12.0
-GNOME_PRINT_REQUIRED=2.12.0
-GNOME_PRINT_UI_REQUIRED=2.12.0
-GNOME_VFS_REQUIRED=2.14.0
 GCONF_REQUIRED=2.12.0
 VTE_REQUIRED=0.9.0
 VTE_NEW_REQUIRED=0.13.1
 LIBXML_REQUIRED=2.4.23
-PANGO_REQUIRED=1.1.1
 LIBDEVHELP_REQUIRED=0.13
 GDL_REQUIRED=0.7.3
 GNOMEBUILD_REQUIRED=0.3.0
@@ -52,9 +42,7 @@ SVN_MAJOR=1
 SVN_MINOR=4
 SVN_PATCH=0
 SUBVERSION_REQUIRED=$SVN_MAJOR.$SVN_MINOR.$SVN_PATCH
-GTKSOURCEVIEW_REQUIRED=2.3.1
-GTKSOURCEVIEW_GNOME_REQUIRED=2.14
-GTKSOURCEVIEW_GTK_REQUIRED=2.10
+GTKSOURCEVIEW_REQUIRED=2.4.0
 BINUTILS_REQUIRED=2.15.92
 LIBWNCK_REQUIRED=2.12
 GDA_REQUIRED=3.99.4
@@ -62,19 +50,11 @@ GDA_REQUIRED=3.99.4
 dnl LIBGTODO_REQUIRED=0.15
 
 AC_SUBST(GLIB_REQUIRED)
-AC_SUBST(GOBJECT_REQUIRED)
-AC_SUBST(GMODULE_REQUIRED)
 AC_SUBST(GDK_PIXBUF_REQUIRED)
 AC_SUBST(GTK_REQUIRED)
 AC_SUBST(ORBIT_REQUIRED)
 AC_SUBST(LIBGLADE_REQUIRED)
 AC_SUBST(GNOME_REQUIRED)
-AC_SUBST(GNOME_CANVAS_REQUIRED)
-AC_SUBST(GNOME_UI_REQUIRED)
-AC_SUBST(GNOME_PRINT_REQUIRED)
-AC_SUBST(GNOME_PRINT_UI_REQUIRED)
-AC_SUBST(GNOME_VFS_REQUIRED)
-AC_SUBST(GCONF_REQUIRED)
 AC_SUBST(VTE_REQUIRED)
 AC_SUBST(LIBXML_REQUIRED)
 AC_SUBST(PANGO_REQUIRED)
@@ -88,8 +68,6 @@ AC_SUBST(LIBGRAPHVIZ_REQUIRED)
 AC_SUBST(NEON_REQUIRED)
 AC_SUBST(SUBVERSION_REQUIRED)
 AC_SUBST(GTKSOURCEVIEW_REQUIRED)
-AC_SUBST(GTKSOURCEVIEW_GNOME_REQUIRED)
-AC_SUBST(GTKSOURCEVIEW_GTK_REQUIRED)
 AC_SUBST(BINUTILS_REQUIRED)
 AC_SUBST(LIBWNCK_REQUIRED)
 AC_SUBST(GDA_REQUIRED)
@@ -172,15 +150,7 @@ fi
 dnl pkg checks are split into separate packages instead of single package
 dnl because different plugins have different requirements.
 
-PKG_CHECK_MODULES(GLIB, glib-2.0 >= $GLIB_REQUIRED)
-
-PKG_CHECK_MODULES(GOBJECT, gobject-2.0 >= $GOBJECT_REQUIRED)
-
-PKG_CHECK_MODULES(GMODULE, gmodule-2.0 >= $GMODULE_REQUIRED)
-
-PKG_CHECK_MODULES(GTHREAD, gthread-2.0 >= $GTHREAD_REQUIRED)
-
-PKG_CHECK_MODULES(GIO, gio-2.0 >= $GIO_REQUIRED)
+PKG_CHECK_MODULES(GLIB, glib-2.0 >= $GLIB_REQUIRED gobject-2.0 >= $GLIB_REQUIRED gmodule-2.0 >= $GLIB_REQUIRED gthread-2.0 >= $GLIB_REQUIRED gio-2.0 >= $GLIB_REQUIRED)
 
 PKG_CHECK_MODULES(GTK, gtk+-2.0 >= $GTK_REQUIRED)
 
@@ -190,23 +160,13 @@ PKG_CHECK_MODULES(ORBIT, ORBit-2.0 >= $ORBIT_REQUIRED)
 
 PKG_CHECK_MODULES(GLADE, libglade-2.0 >= $LIBGLADE_REQUIRED)
 
-PKG_CHECK_MODULES(GNOME, libgnome-2.0 >= $GNOME_REQUIRED)
-
-PKG_CHECK_MODULES(GNOME_CANVAS, libgnomecanvas-2.0 >= $GNOME_CANVAS_REQUIRED)
-
-PKG_CHECK_MODULES(GNOME_UI, libgnomeui-2.0 >= $GNOME_UI_REQUIRED)
-
-PKG_CHECK_MODULES(GNOME_VFS, gnome-vfs-2.0 >= $GNOME_VFS_REQUIRED)
-
-PKG_CHECK_MODULES(GNOME_VFS_MODULE, gnome-vfs-module-2.0 >= $GNOME_VFS_REQUIRED)
+PKG_CHECK_MODULES(GNOME, libgnome-2.0 >= $GNOME_REQUIRED libgnomeui-2.0 >= $GNOME_REQUIRED gnome-vfs-2.0 >= $GNOME_REQUIRED libgnomecanvas-2.0 >= $GNOME_REQUIRED gnome-vfs-module-2.0 >= $GNOME_REQUIRED)
 
 PKG_CHECK_MODULES(GCONF, gconf-2.0 >= $GCONF_REQUIRED)
 
 PKG_CHECK_MODULES(VTE, vte >= $VTE_REQUIRED)
 
 PKG_CHECK_MODULES(LIBXML, libxml-2.0 >= $LIBXML_REQUIRED)
-
-PKG_CHECK_MODULES(PANGO, pango >= $PANGO_REQUIRED)
 
 PKG_CHECK_MODULES(GDL, gdl-1.0 >= $GDL_REQUIRED)
 
@@ -383,9 +343,7 @@ else
 	AC_MSG_RESULT(no)
 	
 	PKG_CHECK_MODULES(PLUGIN_SOURCEVIEW,
-		[libgnome-2.0 >= $GTKSOURCEVIEW_GNOME_REQUIRED,
-		gtk+-2.0 >= $GTKSOURCEVIEW_GTK_REQUIRED,
-		gtksourceview-2.0 >= $GTKSOURCEVIEW_REQUIRED],
+		[gtksourceview-2.0 >= $GTKSOURCEVIEW_REQUIRED],
 		[sourceview="yes"],
 		[sourceview="no"])
 fi
@@ -505,7 +463,7 @@ contains the function bfd_get_section_size_before_reloc])
 
 dnl Setup Anjuta Library flags
 dnl --------------------------
-LIBANJUTA_CFLAGS='$(GNOME_UI_CFLAGS) $(GLADE_CFLAGS) -I$(top_srcdir) -DPACKAGE_PIXMAPS_DIR=\""$(datadir)/pixmaps/$(PACKAGE)"\" -DPACKAGE_LIB_DIR=\""$(pkglibdir)"\" -DPACKAGE_DATA_DIR=\""$(datadir)/$(PACKAGE)"\"'
+LIBANJUTA_CFLAGS='$(GNOME_CFLAGS) $(GLADE_CFLAGS) -I$(top_srcdir) -DPACKAGE_PIXMAPS_DIR=\""$(datadir)/pixmaps/$(PACKAGE)"\" -DPACKAGE_LIB_DIR=\""$(pkglibdir)"\" -DPACKAGE_DATA_DIR=\""$(datadir)/$(PACKAGE)"\"'
 LIBANJUTA_LIBS='$(top_builddir)/libanjuta/libanjuta.la'
 AC_SUBST(LIBANJUTA_CFLAGS)
 AC_SUBST(LIBANJUTA_LIBS)
