@@ -1,3 +1,14 @@
+2008-10-10  Johannes Schmid  <jhs@gnome.org>
+
+	* configure.in:
+	* libanjuta/Makefile.am:
+	* src/Makefile.am:
+	Cleaned up the configure version mess a bit.
+	
+	Ignacio Casal Quinteiro  <nacho.resa@gmail.com>:
+	* src/about.c (about_box_new):
+	523609 – PATCH: Using a deprecated func in about.c
+
 2008-10-10  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
  
 	* libanjuta/anjuta-preferences-dialog.c:
